# bevy-inspector-egui

./: Cargo.toml
crates/bevy-inspector-egui/: Cargo.toml
crates/bevy-inspector-egui-derive/: Cargo.toml
crates/bevy-inspector-egui/src/: egui_mouse_check.rs  lib.rs  quick.rs  utils.rs
crates/bevy-inspector-egui/src/inspector_options/: default_options.rs
